--- a/AturableWira.Module/AturableWira.Module.csproj
+++ b/AturableWira.Module/AturableWira.Module.csproj
@@ -190,6 +190,7 @@
     <Compile Include="BusinessObjects\SYS\Province.cs" />
     <Compile Include="BusinessObjects\SYS\Region.cs" />
     <Compile Include="BusinessObjects\SYS\SubRegion.cs" />
+    <Compile Include="BusinessObjects\SYS\SystemSetting.cs" />
     <Compile Include="DatabaseUpdate\Updater.cs" />
     <Compile Include="Module.cs">
       <SubType>Component</SubType>
