--- a/AturableWira.Module/AturableWira.Module.csproj
+++ b/AturableWira.Module/AturableWira.Module.csproj
@@ -171,11 +171,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessObjects\ACC\Bank.cs" />
-    <Compile Include="BusinessObjects\ACC\BankAccount.cs" />
     <Compile Include="BusinessObjects\ACC\Currency.cs" />
     <Compile Include="BusinessObjects\ACC\GL\GLAccount.cs" />
     <Compile Include="BusinessObjects\ACC\GL\JournalEntry.cs" />
     <Compile Include="BusinessObjects\ACC\GL\JournalVoucher.cs" />
+    <Compile Include="BusinessObjects\ACC\Tax.cs" />
     <Compile Include="BusinessObjects\CRM\Account.cs" />
     <Compile Include="BusinessObjects\CRM\Contact.cs" />
     <Compile Include="BusinessObjects\CRM\Customer.cs" />
@@ -255,6 +255,8 @@
       <SubType>Designer</SubType>
     </None>
     <EmbeddedResource Include="DatabaseUpdate\InitialData\GLAccount.xml" />
+    <EmbeddedResource Include="DatabaseUpdate\InitialData\Currency.xml" />
+    <EmbeddedResource Include="DatabaseUpdate\InitialData\Bank.xml" />
     <Content Include="Welcome.html" />
   </ItemGroup>
   <ItemGroup>
