--- a/AturableWira.Module/AturableWira.Module.csproj
+++ b/AturableWira.Module/AturableWira.Module.csproj
@@ -176,7 +176,9 @@
     <Compile Include="BusinessObjects\ACC\AP\APPaymentItem.cs" />
     <Compile Include="BusinessObjects\ACC\Bank.cs" />
     <Compile Include="BusinessObjects\ACC\Currency.cs" />
+    <Compile Include="BusinessObjects\ACC\GL\GLBudget.cs" />
     <Compile Include="BusinessObjects\ACC\GL\GLAccount.cs" />
+    <Compile Include="BusinessObjects\ACC\GL\GLTotal.cs" />
     <Compile Include="BusinessObjects\ACC\GL\JournalEntry.cs" />
     <Compile Include="BusinessObjects\ACC\GL\JournalVoucher.cs" />
     <Compile Include="BusinessObjects\ACC\Tax.cs" />
@@ -218,6 +220,12 @@
     <Compile Include="Controllers\APViewController.Designer.cs">
       <DependentUpon>APViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\JVViewController.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controllers\JVViewController.Designer.cs">
+      <DependentUpon>JVViewController.cs</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseUpdate\Updater.cs" />
     <Compile Include="Module.cs">
       <SubType>Component</SubType>
@@ -230,6 +238,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Controllers\APViewController.resx">
       <DependentUpon>APViewController.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controllers\JVViewController.resx">
+      <DependentUpon>JVViewController.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml">
       <SubType>Designer</SubType>
